--- a/FabulousWorkoutNote.Android/packages.config
+++ b/FabulousWorkoutNote.Android/packages.config
@@ -5,6 +5,7 @@
   <package id="Fabulous.XamarinForms" version="1.1.0" />
   <package id="Fabulous.XamarinForms.LiveUpdate" version="1.1.0" />
   <package id="FSharp.Core" version="5.0.0" />
+  <package id="FSharp.Data" version="4.0.1" targetFramework="monoandroid11.0" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="monoandroid11.0" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="monoandroid11.0" />
   <package id="Microsoft.Data.Sqlite.Core" version="5.0.9" targetFramework="monoandroid11.0" />
@@ -26,6 +27,7 @@
   <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="monoandroid11.0" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="monoandroid11.0" />
   <package id="Newtonsoft.Json" version="12.0.3" />
+  <package id="SchlenkR.FsHttp" version="5.1.0" targetFramework="monoandroid11.0" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.4" targetFramework="monoandroid11.0" />
   <package id="SQLitePCLRaw.core" version="2.0.4" targetFramework="monoandroid11.0" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="2.0.4" targetFramework="monoandroid11.0" />
