--- a/FabulousWorkoutNote.Android/packages.config
+++ b/FabulousWorkoutNote.Android/packages.config
@@ -6,6 +6,7 @@
   <package id="Fabulous.XamarinForms.LiveUpdate" version="1.1.0" />
   <package id="FSharp.Core" version="5.0.0" />
   <package id="FSharp.Data" version="4.0.1" targetFramework="monoandroid11.0" />
+  <package id="FSharp.Json" version="0.4.1" targetFramework="monoandroid11.0" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="monoandroid11.0" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="monoandroid11.0" />
   <package id="Microsoft.Data.Sqlite.Core" version="5.0.9" targetFramework="monoandroid11.0" />
