--- a/FabulousWorkoutNote/FabulousWorkoutNote.fsproj
+++ b/FabulousWorkoutNote/FabulousWorkoutNote.fsproj
@@ -8,21 +8,16 @@
   <ItemGroup>
     <Compile Include="Helper.fs" />
     <Compile Include="CustomControl.fs" />
-    <Compile Include="Entity.fs" />
     <Compile Include="Model.fs" />
     <Compile Include="Component.fs" />
-    <Compile Include="Repository.fs" />
+    <Compile Include="HttpService.fs" />
     <Compile Include="ExercisePage.fs" />
+    <Compile Include="WorkoutPage.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.18" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.18" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="3.1.18" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.18" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.18" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.18" />
+    <PackageReference Include="FSharp.Json" Version="0.4.1" />
     <PackageReference Include="SchlenkR.FsHttp" Version="5.1.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
