--- a/FabulousWorkoutNote/FabulousWorkoutNote.fsproj
+++ b/FabulousWorkoutNote/FabulousWorkoutNote.fsproj
@@ -1,30 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Include="Helper.fs" />
-    <Compile Include="CustomControl.fs" />
-    <Compile Include="Model.fs" />
-    <Compile Include="Component.fs" />
-    <Compile Include="HttpService.fs" />
-    <Compile Include="ExercisePage.fs" />
-    <Compile Include="WorkoutPage.fs" />
-    <Compile Include="App.fs" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="FSharp.Json" Version="0.4.1" />
-    <PackageReference Include="SchlenkR.FsHttp" Version="5.1.0" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1874" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
-    <PackageReference Include="Fabulous.XamarinForms" Version="1.1.0" />
-    <PackageReference Include="Fabulous.XamarinForms.LiveUpdate" Version="1.1.0" />
-    <PackageReference Include="FSharp.Core" Version="5.0.0" />
-    <PackageReference Update="FSharp.Core" Version="5.0.0" /> <!-- workaround for VSMac bug https://github.com/mono/monodevelop/pull/5137 --> 
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.1</TargetFramework>
+        <EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
+        <DisableImplicitFSharpCoreReference>true</DisableImplicitFSharpCoreReference>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
+        <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+        <PackageReference Include="FSharp.Core" Version="6.0.1" />
+        <PackageReference Include="Fabulous.XamarinForms" Version="2.0.4" />
+    </ItemGroup>
+    <ItemGroup>
+      <Compile Include="App.fs" />
+    </ItemGroup>
 </Project>
